BUG: Long lines would cause unified filter to wrap poorly.
QA: If a suggested value is really long, it would
wrap below the checkbox rather than stay to the right
of it and wrap from there.

--- a/app/styles/grid-sidebar-custom.sass
+++ b/app/styles/grid-sidebar-custom.sass
@@ -701,19 +701,33 @@
           line-height: 2.3em
           margin: 0.2em 0
           min-height: 2.3em
+          padding-left: 2.5em
+          position: relative
 
-        .removeFilterLine
-          @include sprite-menu-icons
-          display: none
-          margin: 0.4em
+          > .uniform.checker // .filterLineToggle
+            left: 0.2em
+            margin: 0.1em
+            position: absolute
 
-        .lineValue
-          font-size: 1.3em
-          font-weight: normal
-          margin-right: 0.3em
-          padding-left: 0.2em
-          position: static
-          width: auto
+          .removeFilterLine
+            @include sprite-menu-icons
+            display: none
+            left: 0.2em
+            margin: 0.4em
+            position: absolute
+
+          .lineValue
+            display: inline
+            float: none
+            font-size: 1.3em
+            font-weight: normal
+            margin-right: 0.3em
+            padding-left: 0.2em
+            position: static
+            width: auto
+
+          .lineCount
+            float: none
 
         .blist-table-editor
           border: none
